[tool.poetry]
name = "xlfly"
version = "0.3.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["xlfly/icon.ico", "xlfly/python.png"]

[tool.poetry.dependencies]
python = ">=3.9"
xlwings = ">=0.28.0"
pandas = ">=1.5.2"
pywin32 = "^306"
pillow = ">=9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
xly = "xlfly.scripts:main"
